# esp-iot-solution

components/usb/iot_usbh/: iot_usbh.c
components/usb/usb_stream/: descriptor.c  usb_stream.c
components/usb/usb_stream/private_include/: usb_stream_descriptor.h
examples/usb/host/usb_camera_mic_spk/main/: CMakeLists.txt  descriptor_log.h  infiray.c  libusb.c  libusb.h  libuvc.c  libuvc.h  libuvc_internal.h  main.c  uvcutil.h
